--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>KONKIT</title>
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="scss/mainStyle.scss">
 </head>
 <body>
 	
@@ -12,6 +12,6 @@
 	<p>Your browsing my personal website for development. My social media portal, my blog, my resume, my laboratory, or whatever else I deciede to throw onto this thing. Note that there are a few hidden features and "easter eggs" dotted around and a score system if you find them all.</p>
 
 	<p>Git test</p>
-
+<script src="./script/mainScript.ts"></script>
 </body>
 </html>
