--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,19 @@
 </head>
 <body>
 	
+	<container id="sccont">
+		<div id="scdiv">
+			<ul><a href="#">GitHub</a></ul>
+			<ul><a href="#">Twitter</a></ul>
+			<ul><a href="#">Reddit</a></ul>
+			<ul><a href="#"></a></ul>
+		</div>
+	</container>
+	
+	
 	<h1>What the hell is KONKIT?</h1>
 	<p>Your browsing my personal website for development. My social media portal, my blog, my resume, my laboratory, or whatever else I deciede to throw onto this thing. Note that there are a few hidden features and "easter eggs" dotted around and a score system if you find them all.</p>
 
-	<p>Git test</p>
 <script src="./script/mainScript.ts"></script>
 </body>
 </html>
